--- a/src/Client/Shared/Components/Modal/FileViewerModal/FileViewer.razor.scss
+++ b/src/Client/Shared/Components/Modal/FileViewerModal/FileViewer.razor.scss
@@ -1,6 +1,7 @@
 ﻿@import '../../../Styles/abstracts/_variables.scss';
 @import '../../../Styles/abstracts/_functions.scss';
 
+
 .file-viewer-container {
     background-color: color(gray-bg-primary);
     height: 100vh;
@@ -11,13 +12,18 @@
     right: 0;
     z-index: 300;
 
-    .main-content{
+    .main-content {
         margin: 0 auto;
         max-width: 600px;
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
+    }
+}
 
+@supports (-webkit-touch-callout: none) {
+    .file-viewer-container {
+        padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     }
 }
